set catetory feature.

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -324,6 +324,14 @@ body {
   }
 }
 
+.p-category{
+  background-color: yellow;
+}
+
+.p-tag{
+  // background-color: yellow;
+}
+
 .page__taxonomy-item {
   display: inline-block;
   margin-right: 5px;
