--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,4 +17,24 @@
     src: url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot?#iefix') format('embedded-opentype'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.woff') format('woff'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.ttf') format('truetype');
    }
 
-   
+   html {
+    /* apply a natural box layout model to all elements */
+    box-sizing: border-box;
+    background-color: $background-color;
+    font-size: 12px;
+  
+    @include breakpoint($medium) {
+      font-size: 14px;
+    }
+  
+    @include breakpoint($large) {
+      font-size: 18px;
+    }
+  
+    @include breakpoint($x-large) {
+      font-size: 20px;
+    }
+  
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+  }
