adjust font size

--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -44,6 +44,8 @@
 }
 
 .site-title {
+  font-family: $sans-serif;
+  font-size: $type-size-4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
