--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -2,18 +2,22 @@
    SINGLE PAGE/POST
    ========================================================================== */
 
+
+   
+  /* 
+  padding-left: 1em;
+   padding-right: 1em;
+   */
+
 #main {
   @include clearfix;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1em;
-  padding-right: 1em;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   max-width: 100%;
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
-
   @include breakpoint($x-large) {
     max-width: $max-width;
   }
@@ -23,6 +27,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  
   min-height: 100vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
