--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -69,8 +69,9 @@ layout: default
     <div class="page__related">
       <h2 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h2>
       <div class="grid__wrapper">
-        {% for post in site.related_posts limit:4 %}
-          {% include archive-single.html type="grid" %}
+        {% assign relate_rel_posts = site.related_posts | where: "categories", page.categories[0]  %}
+        {% for post in relate_rel_posts limit:4 %}
+           {% include archive-single.html type="grid" %}
         {% endfor %}
       </div>
     </div>
