--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -330,12 +330,13 @@ body {
   }
 }
 
-.p-category{
-  background-color: yellow;
+.p-category{ 
+  background-color:lemonchiffon;
+  padding: 5px;
 }
 
 .p-tag{
-  // background-color: yellow;
+  padding: 5px;
 }
 
 .page__taxonomy-item {
