--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,11 @@ layout: archive
 
 {{ content }}
 
+<h3 class="notice">
+  **참고사항** 블로그에 작성된 글들을 지속적으로 업데이트됩니다. 
+</h3>
+
+
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% if paginator %}
