--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,9 +5,8 @@ layout: archive
 {{ content }}
 
 <h3 class="notice">
-  **참고사항** 블로그에 작성된 글들을 지속적으로 업데이트됩니다. 
+  작성된 글들을 문맥상 의미가 부정확하거나 오타가 있을 경우 수정될수 있습니다.
 </h3>
-
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
