--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -13,7 +13,7 @@ $paragraph-indent: false !default; // true, false (default)
 $indent-var: 1.3em !default;
 
 /* font-face */
-$customFont: "JeonjuCraftMjB";
+$customFont: "NanumBarunpen";
 $codingFont : "D2Coding";
 
 /* system typefaces */
