--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,6 +28,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'KOTRA_GOTHIC';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/KOTRA_GOTHIC.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 
 html {
     /* apply a natural box layout model to all elements */
