--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -577,3 +577,25 @@ body {
     }
   }
 }
+
+
+.copy-code-button {
+  float: right;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 50;
+  text-align: center;
+  padding: 5px 5px;
+  background-color: #fff;
+  color: #100f0e;
+  border: 2px solid #dedad6;
+  min-width: 60px;
+  margin-top: -40px;
+  display: block;
+}
+
+.copy-code-button:hover
+{
+  color: #fcfbfa;
+  background-color: #45413e;
+}
