--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: archive
 {{ content }}
 
 <h3 class="notice">
-  작성된 글들을 문맥상 의미가 부정확하거나 오타가 있을 경우 수정될수 있습니다.
+  최신 인프라 기술들을 정리하는 블로그입니다.
 </h3>
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
