--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -591,11 +591,15 @@ body {
   border: 2px solid #dedad6;
   min-width: 60px;
   margin-top: -40px;
-  display: block;
 }
 
 .copy-code-button:hover
 {
   color: #fcfbfa;
   background-color: #45413e;
+}
+
+.copy-code-name{
+  font-size: 14px;
+  padding: 5px 5px;
 }
