--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: archive
 {{ content }}
 
 <h3 class="notice">
-  최신 인프라 기술들을 정리하는 블로그입니다.
+  '경험'했던 일이나 '관심'있는 '기술'들을 정리하고 있습니다.
 </h3>
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
