--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -42,6 +42,17 @@ layout: default
               <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header>
               {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" skip_no_ids=true %}
             </nav>
+            <!--- toc 밑에 book정보를 추가함 -->
+            <div class="entries-grid" style="margin-top: 2em;">
+              {% assign entries = site["book"] %}
+              {% for post in entries %}
+                {% for book in page.books %}
+                  {% if book == post.book %}
+                    {% include book-single.html %}
+                  {% endif %}
+                {% endfor %}                
+              {% endfor %}
+           </div> 
           </aside>
         {% endif %}
         {{ content }}
