--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,7 @@
 <!-- start custom footer snippets -->
 <script src="/assets/js/copyCode.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="/assets/js/getComments.js"></script>
 <!-- end custom footer snippets -->
