--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -9,4 +9,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="/assets/js/getComments.js"></script>
 <!-- end custom head snippets -->
