add visitor counter

--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -5,3 +5,6 @@
     </a>
   </li>
 -->
+<li>
+  <a href="https://hits.sh/kosate.gihub.io/" style="width: fit-content;"><span class="label"><img alt="Hits" src="https://hits.sh/kosate.gihub.io.svg?view=today-total"/></span></a>
+</li>
