--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -6,5 +6,5 @@
   </li>
 -->
 <li>
-  <a href="https://hits.sh/kosate.github.io/" style="width: fit-content;"><span class="label"><img alt="Hits" src="https://hits.sh/kosate.github.io.svg?view=today-total"/></span></a>
+  <a href="https://hits.sh/kosate.github.io/" style="width: fit-content;" target="_blank"><span class="label"><img alt="Hits" src="https://hits.sh/kosate.github.io.svg?view=today-total"/></span></a>
 </li>
