--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -579,27 +579,49 @@ body {
 }
 
 
-.copy-code-button {
-  float: right;
-  cursor: pointer;
-  font-size: 14px;
-  font-weight: 50;
-  text-align: center;
-  padding: 5px 5px;
-  background-color: #fff;
-  color: #100f0e;
-  border: 2px solid #dedad6;
-  min-width: 60px;
-  margin-top: -40px;
-}
-
-.copy-code-button:hover
-{
-  color: #fcfbfa;
-  background-color: #45413e;
-}
-
-.copy-code-name{
+.code-header{
+  height: 30px;  
   font-size: 14px;
   padding: 5px 5px;
+
+  .copy-code-button {
+    float: right;
+    cursor: pointer; 
+    text-align: center; 
+    background-color: #fff;
+    color: #100f0e;
+   border: 1px solid #dedad6;
+    min-width: 60px;
+    padding-left: 5px;
+  // margin-top: -40px;
+  }
+
+  .hidden{
+    display:none;
+  }
+
+  .copy-code-button:hover
+  {
+    color: #fcfbfa;
+    background-color: #45413e;
+  }
+
+  .copy-code-name {
+    float: left;
+    padding-right: 5px;
+  }
+
+  .copy-code-runas {
+    float: left;
+    padding-right: 5px;
+  }
+
+  .copy-code-type {
+    float: left;
+    padding-right: 5px;
+  }
+  .copy-code-elapsedtime{
+    float: left;
+    padding-right: 5px;
+  }
 }
