--- a/_includes/pptstart.html
+++ b/_includes/pptstart.html
@@ -1,2 +1,2 @@
-<div class="reveal  {{ include.id  }} " style="height:300px">
+<div class="reveal  {{ include.id  }} " style="height:300px; {% if include.style%}{{ include.style  }} {% endif %}">
     <div class="slides">
