modify ppt template

--- a/_includes/pptend.html
+++ b/_includes/pptend.html
@@ -6,6 +6,8 @@
  
 <script>
   let {{ include.id  }} = new Reveal(document.querySelector('.{{ include.id  }}'), { 
+    width:982,
+    height:552,
     embedded:true,
     hash:true,
     disableLayout: false,
