--- a/_includes/page__meta.html
+++ b/_includes/page__meta.html
@@ -3,10 +3,22 @@
   <p class="page__meta">
     {% if document.show_date and document.date %}
       {% assign date = document.date %}
+      <!---업데이트 시간이 있으면 업데이트시간으로 보여줌-->
+      {% if document.modified_at %}
+        {% assign date = document.modified_at %}
+      {% endif %}
       <span class="page__meta-date">
         <i class="far {% if include.type == 'grid' and document.read_time and document.show_date %}fa-fw {% endif %}fa-calendar-alt" aria-hidden="true"></i>
         {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
         <time datetime="{{ date | date_to_xmlschema }}">{{ date | date: date_format }}</time>
+        <!---업데이트 시간에 따라서-->
+        {% assign modified_date = date | date: "%s" %}
+        {% assign current_date = 'now' | date: "%s" %}
+        {% assign days_diff = current_date | minus: modified_date %}
+        {% assign days_ago = days_diff | divided_by: 86400 %}
+        {% if days_ago <= 7 %}
+          <span class="update-icon">🌟</span> <!-- Example icon -->
+        {% endif %}
       </span>
     {% endif %}
 
