--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -6,6 +6,7 @@ html {
   /* sticky footer fix */
   position: relative;
   min-height: 100%;
+  font-synthesis: none;
 }
 
 body {
@@ -14,7 +15,8 @@ body {
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
-
+  font-synthesis: none;
+  
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
     overflow: hidden;
